--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f7ecb56d88.js" crossorigin="anonymous"></script> <!--ICONS-->
     <title>Lorenzo Rossi Photographer</title>
 </head>
 <body>
-    <div id="container">
         <div id="header">
-            <h1 id="home-title" class="title">Lorenzo Rossi</h1>
-            <div id="navbar">
+            <h1 id="home-title" class="header-items">Lorenzo Rossi</h1>
+            <div id="navbar" class="header-items">
                 <ul>
                     <li><a href="#index">Home</a></li>
                     <li><a href="#">Chi sono</a></li>
@@ -20,11 +20,11 @@
                     <li><a href="#">Privacy Policy</a></li>
                 </ul>
             </div>
-            <div class="social-icons">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
+            <div class="header-items social-icons">
+                <a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
-    </div>
+    
 </body>
 </html>
