Added links, contatti and responsiveness
Added link to other pages; Made small form in #contacts. Made a responsive css.

--- a/contatti.html
+++ b/contatti.html
@@ -25,6 +25,12 @@
                 <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
-    
+        
+        <div class="contacts">
+            <form action="" method="post">
+                <label for="nome">Nome </label> <input id="nome" type="text" placeholder="Nome" required>
+                <label for="cognome">Cognome </label> <input id="cognome" type="text" placeholder="Cognome" required>
+            </form>
+        </div>
 </body>
 </html>
