--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
         <div id="header">
+
+            <div id="menubars"><i class="fa-solid fa-bars"></i></div>
             <h1 id="home-title" class="header-items">Lorenzo Rossi</h1>
+
             <div id="navbar" class="header-items">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -20,6 +23,17 @@
                     <li><a href="privacy.html">Privacy Policy</a></li>
                 </ul>
             </div>
+
+            <div id="aside">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="chi-sono.html">Chi sono</a></li>
+                    <li><a href="galleria.html">Galleria</a></li>
+                    <li><a href="contatti.html">Contatti</a></li>
+                    <li><a href="privacy.html">Privacy Policy</a></li>
+                </ul>
+            </div>
+
             <div class="header-items social-icons">
                 <a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
                 <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/"><i class="fa-brands fa-instagram"></i></a>
