--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
         <div id="header">
-
+            <!--Aside menu toogle bar-->
             <div id="menubars"><i class="fa-solid fa-bars"></i></div>
+            <!--Title-->
             <h1 id="home-title" class="header-items">Lorenzo Rossi</h1>
-
+            <!--Navigation bar for desktop-->
             <div id="navbar" class="header-items">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -23,7 +24,7 @@
                     <li><a href="privacy.html">Privacy Policy</a></li>
                 </ul>
             </div>
-
+            <!--Navigation aside bar for mobile-->
             <div id="aside">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -33,12 +34,13 @@
                     <li><a href="privacy.html">Privacy Policy</a></li>
                 </ul>
             </div>
-
+            <!--Social icons link-->
             <div class="header-items social-icons">
-                <a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
                 <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
-    
+
+        <!--SCRIPT-->
+        
 </body>
 </html>
