--- a/contatti.html
+++ b/contatti.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/f7ecb56d88.js" crossorigin="anonymous"></script> <!--ICONS-->
+    <!--ICONS-->
+    <script src="https://kit.fontawesome.com/f7ecb56d88.js" crossorigin="anonymous"></script>
     <title>Lorenzo Rossi Photographer</title>
 </head>
 <body>
+        <!--MAIN PAGE-->
         <div id="header">
             <h1 id="home-title" class="header-items">Lorenzo Rossi</h1>
             <div id="navbar" class="header-items">
@@ -21,15 +23,35 @@
                 </ul>
             </div>
             <div class="header-items social-icons">
-                <a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
                 <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
         
+        <!--CONTATTI-->
         <div class="contacts">
             <form action="" method="post">
-                <label for="nome">Nome </label> <input id="nome" type="text" placeholder="Nome" required>
-                <label for="cognome">Cognome </label> <input id="cognome" type="text" placeholder="Cognome" required>
+                <legend>
+                    <h2>Contatti</h2>
+                </legend>
+
+                <hr>
+               
+                <div id="email-info">
+                    <p>E-mail</p>
+                    <div class="email-container">
+                        <i class="fa-solid fa-envelope"></i> 
+                        <a href="mailto:info@lorenzorossiph.it" class="email">info@lorenzorossiph.it</a>
+                    </div>
+                </div>
+
+                <div id="cell-info">
+                    <p>Whatsapp</p>
+                    <div class="cell-container"> <!-- -->
+                        <a href="https://wa.me/393342586238/?text=Ciao%20Lorenzo%20%..."><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="tel:+393342586238" class="cell">+39 334 2586238</a>
+                    </div>
+                </div>
+
             </form>
         </div>
 </body>
