--- a/contatti.html
+++ b/contatti.html
@@ -37,19 +37,21 @@
                 <hr>
                
                 <div id="email-info">
-                    <p>E-mail</p>
+                    <h3>E-mail</h3>
                     <div class="email-container">
                         <i class="fa-solid fa-envelope"></i> 
                         <a href="mailto:info@lorenzorossiph.it" class="email">info@lorenzorossiph.it</a>
                     </div>
+                    <p>Scrivimi una mail per avere informazioni su servizi e prodotti! Sarà mia premura risponderti nel più breve tempo possibile!</p>
                 </div>
 
                 <div id="cell-info">
-                    <p>Whatsapp</p>
+                    <h3>Whatsapp</h3>
                     <div class="cell-container"> <!-- -->
                         <a href="https://wa.me/393342586238/?text=Ciao%20Lorenzo%20%..."><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="tel:+393342586238" class="cell">+39 334 2586238</a>
                     </div>
+                    <p>Chiamami o inviami un messaggio su Whatsapp per ricevere un appuntamento o richiedere indormazioni!</p>
                 </div>
 
             </form>
