Mobile version editing...
Deleted other html pages. I'll work later on them.
Still editing mobile version.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
     <title>Lorenzo Rossi Photographer</title>
 </head>
 <body>
+
+
+
+
         <div id="header">
-            <!--Aside menu toogle bar-->
-            <div id="menubars"><i class="fa-solid fa-bars"></i></div>
             <!--Title-->
-            <h1 id="home-title" class="header-items">Lorenzo Rossi</h1>
-            <!--Navigation bar for desktop-->
-            <div id="navbar" class="header-items">
+            <h1 id="title" class="header-items">Lorenzo Rossi</h1>
+            
+            <!--Side menu toogle bar-->
+            <input id="toogle-bar-input" class="hidden" type="checkbox">
+            <label class="bars-container" for="toogle-bar-input">
+                <span class="toogle-bars"></span>
+            </label>
+
+            <!--Navigation bar-->
+            <div id="topbar" class="header-items">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="chi-sono.html">Chi sono</a></li>
@@ -24,17 +33,8 @@
                     <li><a href="privacy.html">Privacy Policy</a></li>
                 </ul>
             </div>
-            <!--Navigation aside bar for mobile-->
-            <div id="aside">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="chi-sono.html">Chi sono</a></li>
-                    <li><a href="galleria.html">Galleria</a></li>
-                    <li><a href="contatti.html">Contatti</a></li>
-                    <li><a href="privacy.html">Privacy Policy</a></li>
-                </ul>
-            </div>
-            <!--Social icons link-->
+
+            <!--Social icons-->
             <div class="header-items social-icons">
                 <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/"><i class="fa-brands fa-instagram"></i></a>
             </div>
