--- a/contatti.html
+++ b/contatti.html
@@ -5,15 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <!--ICONS-->
     <script src="https://kit.fontawesome.com/f7ecb56d88.js" crossorigin="anonymous"></script>
-    <title>Lorenzo Rossi Photographer</title>
+    <title>Lorenzo Rossi Ph | Contatti</title>
 </head>
 <body>
-        <!--MAIN PAGE-->
+
+
+        <!--HOME/MAIN PAGE-->
         <div id="header">
-            <h1 id="home-title" class="header-items">Lorenzo Rossi</h1>
-            <div id="navbar" class="header-items">
+            <!--Title-->
+            <h1 id="title" class="header-items">Lorenzo Rossi</h1>
+             <!--Side menu toogle bar-->
+             <input id="toogle-bar-input" class="hidden" type="checkbox">
+             <label class="bars-container" for="toogle-bar-input">
+                 <span class="toogle-bars"></span>
+             </label>
+
+            <!--Navigation bar-->
+            <div id="topbar" class="header-items">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="chi-sono.html">Chi sono</a></li>
@@ -22,10 +31,24 @@
                     <li><a href="privacy.html">Privacy Policy</a></li>
                 </ul>
             </div>
+
+             <!--Social icons-->
             <div class="header-items social-icons">
                 <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
         
         <!--CONTATTI-->
         <div class="contacts">
