--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f7ecb56d88.js" crossorigin="anonymous"></script> <!--ICONS-->
-    <title>Lorenzo Rossi Photographer</title>
+    <title>Lorenzo Rossi Ph | Home</title>
 </head>
 <body>
-
-
-
-
+        <!--HOME/MAIN PAGE-->
         <div id="header">
             <!--Title-->
             <h1 id="title" class="header-items">Lorenzo Rossi</h1>
