--- a/contatti.html
+++ b/contatti.html
@@ -71,7 +71,7 @@
                 <div id="cell-info">
                     <h3>Whatsapp</h3>
                     <div class="cell-container"> <!-- -->
-                        <a href="https://wa.me/393342586238/?text=Ciao%20Lorenzo%20%..."><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://wa.me/393342586238/?text=Ciao%20Lorenzo..."><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="tel:+393342586238" class="cell">+39 334 2586238</a>
                     </div>
                     <p>Chiamami o inviami un messaggio su Whatsapp per ricevere un appuntamento o richiedere indormazioni!</p>
