--- a/contatti.html
+++ b/contatti.html
@@ -25,7 +25,7 @@
             <div id="topbar" class="header-items">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="chi-sono.html">Chi sono</a></li>
+                    <li><a href="chisono.html">Chi sono</a></li>
                     <li><a href="galleria.html">Galleria</a></li>
                     <li><a href="contatti.html">Contatti</a></li>
                     <li><a href="privacy.html">Privacy Policy</a></li>
@@ -46,38 +46,39 @@
 
 
 
-
-
-
-        
         <!--CONTATTI-->
-        <div class="contacts">
-            <form action="" method="post">
-                <legend>
-                    <h2>Contatti</h2>
-                </legend>
-
-                <hr>
-               
-                <div id="email-info">
-                    <h3>E-mail</h3>
-                    <div class="email-container">
-                        <i class="fa-solid fa-envelope"></i> 
-                        <a href="mailto:info@lorenzorossiph.it" class="email">info@lorenzorossiph.it</a>
-                    </div>
-                    <p>Scrivimi una mail per avere informazioni su servizi e prodotti! Sarà mia premura risponderti nel più breve tempo possibile!</p>
+        <div class="contacts">   
+            <h2>Contatti</h2>
+            <hr>
+            <div id="email-info">
+                <h3>E-mail</h3>
+                <div class="email-container">
+                    <i class="fa-solid fa-envelope"></i>                         <a href="mailto:info@lorenzorossiph.it" class="icon-description">info@lorenzorossiph.it</a>
                 </div>
+                <p class="bottom-description">Scrivimi una mail per avere informazioni su servizi e prodotti! Sarà mia premura risponderti nel più breve tempo possibile!</p>
+            </div>
 
-                <div id="cell-info">
-                    <h3>Whatsapp</h3>
-                    <div class="cell-container"> <!-- -->
-                        <a href="https://wa.me/393342586238/?text=Ciao%20Lorenzo..."><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href="tel:+393342586238" class="cell">+39 334 2586238</a>
-                    </div>
-                    <p>Chiamami o inviami un messaggio su Whatsapp per ricevere un appuntamento o richiedere indormazioni!</p>
+            <div id="cell-info">
+                <h3>Whatsapp</h3>
+                <div class="cell-container"> 
+                    <a href="https://wa.me/393342586238/?text=Ciao%20Lorenzo...">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                    <a href="tel:+393342586238" class="icon-description">+39 334 2586238</a>
                 </div>
+                <p class="bottom-description">Chiamami o inviami un messaggio su Whatsapp per ricevere un appuntamento o richiedere indormazioni!</p>
+            </div>
 
-            </form>
+            <div id="social-info">
+                <h3>Instagram</h3>
+                <div class="social-container">
+                    <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/">
+                        <i class="fa-brands fa-instagram"></i>
+                        <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/" class="icon-description">@lorenzo.rossi.99</a>
+                    </a>
+                </div>
+                <p class="bottom-description">Seguimi su instagram per rimanere aggiornato sui miei lavori o per mandarmi un direct.</p>
+            </div>
         </div>
 </body>
 </html>
