Update chisono.html img not showing
Img showing on github pages problem solved deleting / before img path. (/img/.png ---> img/.png)

--- a/chisono.html
+++ b/chisono.html
@@ -45,9 +45,9 @@
 
 
 
-        <!--CONTATTI-->
+        <!--CHI SONO-->
         <div class="chisono">
-            <img src="/img/profile-pic_01.png" alt="Foto profilo Lorenzo Rossi da Instagram">
+            <img src="img/profile-pic_01.png" alt="Foto profilo Lorenzo Rossi da Instagram">
             <p>
                 Fin da piccolo ho sempre fotografato e sognato, sognato e fotografato. 
                 Per la mia prima comunione mi regalarono uno dei primi smartphone, e ovunque andassi, trovavo sempre il pretesto per scattare fotografie a tutto ciò che mi circondava. 
