Added transitions, signature test, tap to screen to close
On mobile side nav bar: added transition when opening and closing side menu; added closing side navbar when taping out of the menu, in the middle of the screen;
Header: added signature instead of h1 on index.html to test it.
Little changes: cursor pointer on toogle for side bar

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
         <!--HOME/MAIN PAGE-->
         <div id="header">
             <!--Title-->
-            <h1 id="title" class="header-items">Lorenzo Rossi</h1>
+            <!-- <h1 id="title" class="header-items">Lorenzo Rossi</h1> -->
+            <img class="header-items" src="img/firma-small.png" alt="Firma">
             
             <!--Side menu toogle bar-->
             <input id="toogle-bar-input" class="hidden" type="checkbox">
             <label class="bars-container" for="toogle-bar-input">
                 <span class="toogle-bars"></span>
             </label>
-
+            <label id="taptoclose-layer" for="toogle-bar-input"></label>
             <!--Navigation bar-->
             <div id="topbar" class="header-items">
                 <ul>
