--- a/contatti.html
+++ b/contatti.html
@@ -15,12 +15,15 @@
         <div id="header">
             <!--Title-->
             <h1 id="title" class="header-items">Lorenzo Rossi</h1>
-             <!--Side menu toogle bar-->
-             <input id="toogle-bar-input" class="hidden" type="checkbox">
-             <label class="bars-container" for="toogle-bar-input">
-                 <span class="toogle-bars"></span>
-             </label>
-
+            <!-- <img class="header-items" src="img/firma-small.png" alt="Firma"> -->
+             
+            <!--Side menu toogle bar-->
+            <input id="toogle-bar-input" class="hidden" type="checkbox">
+            <label class="bars-container" for="toogle-bar-input">
+                <span class="toogle-bars"></span>
+            </label>
+            <label id="taptoclose-layer" for="toogle-bar-input"></label>
+            
             <!--Navigation bar-->
             <div id="topbar" class="header-items">
                 <ul>
@@ -32,7 +35,7 @@
                 </ul>
             </div>
 
-             <!--Social icons-->
+            <!--Social icons-->
             <div class="header-items social-icons">
                 <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/"><i class="fa-brands fa-instagram"></i></a>
             </div>
