New design for chisono web page
Added footer section to all web pages;
Edited a different chisono.html design;
Added different profile pics and bacgkound pics;

--- a/contatti.html
+++ b/contatti.html
@@ -83,5 +83,14 @@
                 <p class="bottom-description">Seguimi su instagram per rimanere aggiornato sui miei lavori o per mandarmi un direct.</p>
             </div>
         </div>
+
+
+        <!--FOOTER-->
+        <div class="">
+        </div>
+
+
+
+
 </body>
 </html>
