--- a/chisono.html
+++ b/chisono.html
@@ -9,7 +9,7 @@
     <title>Lorenzo Rossi Ph | Chi sono</title>
 </head>
 <body>
-        <!--HOME/MAIN PAGE-->
+        <!--HEADER-->
         <div id="header">
             <!--Title-->
             <h1 id="title" class="header-items">Lorenzo Rossi</h1>
@@ -42,28 +42,32 @@
 
 
 
-
-
-
-
-
         <!--CHI SONO-->
         <div class="chisono">
+
+            <img class="bg-pic" src="img/surf.png" alt="Immagine surf">
+            
             <h2>Chi Sono</h2>
-            <hr>
-            <img src="img/profile-pic_01.png" alt="Foto profilo Lorenzo Rossi da Instagram">
-            <p>
-                Fin da piccolo ho sempre fotografato e sognato, sognato e fotografato. 
-                Per la mia prima comunione mi regalarono uno dei primi smartphone, e ovunque andassi, trovavo sempre il pretesto per scattare fotografie a tutto ciò che mi circondava. 
-                Nel 2010 ho abbandonato la “macchinine radiocomandate” perchè spinto dalla voglia di vedere più in alto. 
-                Cosi, insieme a mio nonno, costruimmo il mio primo aereo radiocomandato. 
-                Qualche anno dopo, con le prime centraline “quasi” affidabili per i droni, mi buttai a capofitto nel settore, iniziando a costruirli e a farli volare, cercando di catturare qualche immagine dall’alto. 
-                Al compimento dei miei 18 anni, la mia prima reflex, e da lì mi sono subito reso conto di cosa avrei voluto fare nella vita. 
-                Dopo un paio di anni di intensa formazione, ho svolto i miei primi lavori, ed oggi è diventato il mio lavoro. 
-                Mi sono dotato di attrezzature professionali e dei brevetti necessari al pilotaggio dei droni in qualsiasi scenario ammesso dai regolamenti. 
-                Ormai da qualche anno seguo regate di vela e surfisti in giro per l’Italia. 
-                Benvenuti nel mio mondo!
-            </p>
+          
+            <div class="container">
+                <img id="profile-pic" src="img/profile-pic_01.png" alt="Foto profilo Lorenzo Rossi da Instagram">
+                <p>
+                    Fin da piccolo ho sempre fotografato e sognato, sognato e fotografato. 
+                    Per la mia prima comunione mi regalarono uno dei primi smartphone, e ovunque andassi, trovavo sempre il pretesto per scattare fotografie a tutto ciò che mi circondava. 
+                    Nel 2010 ho abbandonato la “macchinine radiocomandate” perchè spinto dalla voglia di vedere più in alto. 
+                    Cosi, insieme a mio nonno, costruimmo il mio primo aereo radiocomandato. 
+                    Qualche anno dopo, con le prime centraline “quasi” affidabili per i droni, mi buttai a capofitto nel settore, iniziando a costruirli e a farli volare, cercando di catturare qualche immagine dall’alto. 
+                    Al compimento dei miei 18 anni, la mia prima reflex, e da lì mi sono subito reso conto di cosa avrei voluto fare nella vita. 
+                    Dopo un paio di anni di intensa formazione, ho svolto i miei primi lavori, ed oggi è diventato il mio lavoro. 
+                    Mi sono dotato di attrezzature professionali e dei brevetti necessari al pilotaggio dei droni in qualsiasi scenario ammesso dai regolamenti. 
+                    Ormai da qualche anno seguo regate di vela e surfisti in giro per l’Italia. 
+                    Benvenuti nel mio mondo!
+                </p>
+            </div>
+        </div>
+
+        <!--FOOTER-->
+        <div class="">
         </div>
 
         <!--SCRIPT-->
