--- a/contatti.html
+++ b/contatti.html
@@ -14,8 +14,8 @@
         <!--HOME/MAIN PAGE-->
         <div id="header">
             <!--Title-->
-            <h1 id="title" class="header-items">Lorenzo Rossi</h1>
-            <!-- <img class="header-items" src="img/firma-small.png" alt="Firma"> -->
+            <!-- <h1 id="title" class="header-items">Lorenzo Rossi</h1> -->
+            <img class="" src="img/firma-small.png" alt="Firma">
              
             <!--Side menu toogle bar-->
             <input id="toogle-bar-input" class="hidden" type="checkbox">
