Update header style and chisono.
Added new image on chisono.html;
New color and alpha on header;

--- a/chisono.html
+++ b/chisono.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f7ecb56d88.js" crossorigin="anonymous"></script> <!--ICONS-->
@@ -13,7 +13,7 @@
         <div id="header">
             <!--Title-->
             <!-- <h1 id="title" class="header-items">Lorenzo Rossi</h1> -->
-            <img class="" src="img/firma-small.png" alt="Firma">
+            <img class="header-items" src="img/firma-small.png" alt="Firma">
            
             <!--Side menu toogle bar-->
             <input id="toogle-bar-input" class="hidden" type="checkbox">
@@ -45,7 +45,7 @@
         <!--CHI SONO-->
         <div class="chisono clearfix">
 
-            <img class="bg-pic" src="img/surf.png" alt="Immagine surf">
+            <img class="bg-pic" src="img/boat.png" alt="Immagine surf">
           
             <div class="container clearfix">
                 <h2>Chi Sono</h2>
