--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="header">
             <!--Title-->
             <!-- <h1 id="title" class="header-items">Lorenzo Rossi</h1> -->
-            <img class="" src="img/firma-small.png" alt="Firma">
+            <img class="header-items" src="img/firma-small.png" alt="Firma">
             
             <!--Side menu toogle bar-->
             <input id="toogle-bar-input" class="hidden" type="checkbox">
