--- a/contatti.html
+++ b/contatti.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f7ecb56d88.js" crossorigin="anonymous"></script>
@@ -12,10 +12,10 @@
 
 
         <!--HOME/MAIN PAGE-->
-        <div id="header">
+        <div class="header">
             <!--Title-->
             <!-- <h1 id="title" class="header-items">Lorenzo Rossi</h1> -->
-            <img class="header-items" src="img/firma-small.png" alt="Firma">
+            <img class="header-items logo-firma" src="img/firma-small.png" alt="Firma">
              
             <!--Side menu toogle bar-->
             <input id="toogle-bar-input" class="hidden" type="checkbox">
@@ -50,43 +50,48 @@
 
 
         <!--CONTATTI-->
-        <div class="contacts">   
-            <h2>Contatti</h2>
-            <hr>
-            <div id="email-info">
-                <h3>E-mail</h3>
-                <div class="email-container">
-                    <i class="fa-solid fa-envelope"></i>                         <a href="mailto:info@lorenzorossiph.it" class="icon-description">info@lorenzorossiph.it</a>
-                </div>
-                <p class="bottom-description">Scrivimi una mail per avere informazioni su servizi e prodotti! Sarà mia premura risponderti nel più breve tempo possibile!</p>
-            </div>
+        <div class="wrapper-contacts">
+            <!-- <img class="bg-pic" src="img/surf.png" alt="Immagine"> -->
 
-            <div id="cell-info">
-                <h3>Whatsapp</h3>
-                <div class="cell-container"> 
-                    <a href="https://wa.me/393342586238/?text=Ciao%20Lorenzo...">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a>
-                    <a href="tel:+393342586238" class="icon-description">+39 334 2586238</a>
+            <div class="contacts">   
+                <h2>Contatti</h2>
+                <hr>
+                <div id="email-info">
+                    <h3>E-mail</h3>
+                    <div class="email-container">
+                        <i class="fa-solid fa-envelope"></i>                         <a href="mailto:info@lorenzorossiph.it" class="icon-description">info@lorenzorossiph.it</a>
+                    </div>
+                    <p class="bottom-description">Scrivimi una mail per avere informazioni su servizi e prodotti! Sarà mia premura risponderti nel più breve tempo possibile!</p>
                 </div>
-                <p class="bottom-description">Chiamami o inviami un messaggio su Whatsapp per ricevere un appuntamento o richiedere indormazioni!</p>
-            </div>
 
-            <div id="social-info">
-                <h3>Instagram</h3>
-                <div class="social-container">
-                    <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/">
-                        <i class="fa-brands fa-instagram"></i>
-                        <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/" class="icon-description">@lorenzo.rossi.99</a>
-                    </a>
+                <div id="cell-info">
+                    <h3>Whatsapp</h3>
+                    <div class="cell-container"> 
+                        <a href="https://wa.me/393342586238/?text=Ciao%20Lorenzo...">
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </a>
+                        <a href="tel:+393342586238" class="icon-description">+39 334 2586238</a>
+                    </div>
+                    <p class="bottom-description">Chiamami o inviami un messaggio su Whatsapp per ricevere un appuntamento o richiedere indormazioni!</p>
                 </div>
-                <p class="bottom-description">Seguimi su instagram per rimanere aggiornato sui miei lavori o per mandarmi un direct.</p>
+
+                <div id="social-info">
+                    <h3>Instagram</h3>
+                    <div class="social-container">
+                        <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/">
+                            <i class="fa-brands fa-instagram"></i>
+                            <a target="_blank" href="https://www.instagram.com/lorenzo.rossi.99/" class="icon-description">@lorenzo.rossi.99</a>
+                        </a>
+                    </div>
+                    <p class="bottom-description">Seguimi su instagram per rimanere aggiornato sui miei lavori o per mandarmi un direct.</p>
+                </div>
             </div>
         </div>
 
 
         <!--FOOTER-->
-        <div class="">
+        <div class="footer">
+            <p>Copyright 2024 Lorenzo Rossi</p>
         </div>
 
 
