Update header and paddings
Updated header: alpha color and position;
Updated chisono and contatti: padding, backgroundblur, position of obects, added logo link in contatti;

--- a/contatti.html
+++ b/contatti.html
@@ -15,7 +15,9 @@
         <div class="header">
             <!--Title-->
             <!-- <h1 id="title" class="header-items">Lorenzo Rossi</h1> -->
-            <img class="header-items logo-firma" src="img/firma-small.png" alt="Firma">
+            <a class="header-items" href="index.html">
+                <img class="logo-firma" src="img/firma-small.png" alt="Firma">
+             </a>
              
             <!--Side menu toogle bar-->
             <input id="toogle-bar-input" class="hidden" type="checkbox">
