Revert "Added galleria.html"
This reverts commit ae0cce0e611336fe6926c2b28f1879f1aac98929.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <div class="header">
             <!--Title-->
             <!-- <h1 id="title" class="header-items">Lorenzo Rossi</h1> -->
-            <a class="header-items" href="index.html">
-                <img class="logo-firma" src="img/firma-small.png" alt="Firma">
-            </a>
+            <img class="header-items logo-firma" src="img/firma-small.png" alt="Firma">
             
             <!--Side menu toogle bar-->
             <input id="toogle-bar-input" class="hidden" type="checkbox">
